# ipc-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md
src/codechu_ipc/: __init__.py  client.py  fifo.py  lifecycle.py  protocol.py  server.py
tests/: README.md  test_fifo.py  test_lifecycle.py  test_protocol.py  test_unix_socket.py
